# Cubey

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  generate_gif.bat
.github/workflows/: build.yml
src/: Cubey.cpp
